--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -19,7 +19,7 @@
         height: var(--rp-size-control-md);
         padding: 0 var(--rp-spacing-4);
         font-size: var(--rp-font-size-base);
-        background-color: var(--rp-color-surface);
+        background-color: var(--rp-color-button-default-bg);
         border: var(--rp-border-width-thin) solid var(--rp-color-border);
         border-radius: var(--_rp-select-radius);
         cursor: pointer;
